<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff">
        <Button
            android:id="@+id/back_button18"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:background="@drawable/ic_action_back"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="115dp"
            android:text="钱包"
            android:textColor="#202020"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/money1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:text="收益"
            android:textSize="14sp"
            android:textColor="#ff1111"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#eeeeee"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="账户余额"
                android:textColor="#505050"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="14dp"
                android:paddingBottom="4dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="一个苹果"
                android:textColor="#909090"
                android:layout_marginLeft="14dp"
                android:textSize="10sp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0元"
            android:textColor="#ff1111"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="263dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#eeeeee"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:text="请选择充值金额"
        android:paddingLeft="14dp"
        android:textSize="12sp"
        android:paddingTop="10dp"
        android:textColor="#505050"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="#ffffff"
        android:orientation="horizontal">
        <Button
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:background="@drawable/rectred2"
            android:textSize="12sp"
            android:layout_marginLeft="14dp"
            android:textColor="#ff1111"
            android:text="@string/money1"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:background="@drawable/rectgray"
            android:textSize="12sp"
            android:textColor="#909090"
            android:layout_marginLeft="8dp"
            android:text="@string/money6"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:background="@drawable/rectgray"
            android:textSize="12sp"
            android:textColor="#909090"
            android:layout_marginLeft="8dp"
            android:text="@string/money10"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:background="@drawable/rectgray"
            android:textSize="12sp"
            android:textColor="#909090"
            android:layout_marginLeft="8dp"
            android:text="@string/money20"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:background="@drawable/rectgray"
            android:textSize="12sp"
            android:textColor="#909090"
            android:layout_marginLeft="8dp"
            android:text="@string/money100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#eeeeee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#505050"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="255dp"
            android:text="金额"/>

        <EditText
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:textColor="#505050"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:background="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#505050"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:text="元"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#eeeeee"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="确定充值"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:background="@drawable/rectred1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>
