<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_me"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/ic_action_back"/>
            <ImageButton
                android:id="@+id/set_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/set"
                android:layout_marginLeft="290dp"
                android:layout_marginTop="12dp"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/header1"
                android:layout_marginLeft="143dp"
                android:layout_marginBottom="25dp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/star"
                android:layout_marginTop="67dp"
                android:layout_marginLeft="197dp"
                />
        </FrameLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="152dp"
                android:text="一个苹果"
                android:textSize="14sp"
                android:textColor="#202020"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="12dp"
                android:layout_gravity="center"
                android:background="@drawable/revise"/>
        </LinearLayout>
        <!--<TextView
            android:layout_marginLeft="126dp"
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14sp"
            android:lineSpacingExtra="5dp"
            android:textColor="#202020"
            android:layout_marginBottom="14dp"/>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Button
                android:id="@+id/follow"
                android:background="#00FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="#202020"
                android:layout_marginLeft="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/follow"
                android:layout_marginBottom="13dp"/>

            <Button
                android:id="@+id/fans"
                android:background="#00FFFFFF"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:lineSpacingExtra="5dp"
                android:textColor="#202020"
                android:text="@string/fans"
                android:layout_marginBottom="13dp"
                android:layout_width="70dp"/>

            <Button
                android:id="@+id/publish"
                android:background="#00FFFFFF"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textSize="13dp"
                android:lineSpacingExtra="5dp"
                android:textColor="#202020"
                android:text="@string/output"
                android:layout_marginBottom="13dp"
                />

            <Button
                android:id="@+id/collect"
                android:background="#00FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="#202020"
                android:lineSpacingExtra="5dp"
                android:text="@string/collect"
                android:layout_marginBottom="13dp"/>

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="#f6f6f6"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="horizontal"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/order"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/order"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#202020"
                android:text="订单"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/money"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/money"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#202020"
                android:text="钱包"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/notice"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/notice"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#202020"
                android:text="消息"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/draft"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/draft"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#202020"
                android:text="草稿"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="#f6f6f6"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">
        <Button
            android:id = "@+id/info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/info"
            android:text="用户反馈"/>
        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="#dcdcdc"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id = "@+id/message"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/message"
            android:text="系统通知"/>
        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="#dcdcdc"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id = "@+id/share"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/share"
            android:text="软件分享"/>
        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:background="#dcdcdc"
            android:layout_marginLeft="20dp"/>
        <Button
            android:id = "@+id/version"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:drawablePadding="14dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/version"
            android:text="版本信息"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#dcdcdc"/>
</LinearLayout>
